# CommiFaceLib

./: .gitmodules  CMakeLists.txt  README.md
include/CommiFaceLib/interfaces/: communication_interface.hpp
include/CommiFaceLib/old/i2c/: i2c.hpp  wire_device.hpp  wire_types.hpp
include/CommiFaceLib/old/i2c/drivers/: psd17.hpp
include/CommiFaceLib/util/: byte_converter.hpp
src/old/i2c/: i2c.cpp  wire_device.cpp
src/old/i2c/drivers/: psd17.cpp
src/util/: byte_converter.cpp
test/: test.cpp
